src/objects/Tour_Closed_Hour__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Tours Closed Hours</relationshipLabel>
        <relationshipName>Tours_Closed_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <label>Weekday</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tour Closed Hour</label>
    <nameField>
        <displayFormat>TCH-{0}</displayFormat>
        <label>Tour Closed Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours Closed Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>